--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header glass-effect">
       <div class="container header-flex">
         <div class="header-identidad">
-          <img src="img/logotipo.png" alt="Logotipo Yaneth" class="logo" />
+          <img src="img/LOGOTIPO.png" alt="Logotipo Yaneth" class="logo" />
           <div>
             <h1 class="nombre glow-text">PÁGINA INFORMATIVA</h1>
             <p class="carrera" style="margin-top:0.3em;">MARTINEZ SUAREZ, Yaneth Liz</p>
